Changelog
=========

1.3.2 (unreleased)
------------------

- Drop support for Python < 2.7.9. [buchi]
- Use Python's built-in HTTPS handler which enables support for TLS 1.2 and
  uses CA certificates provided by the OS. [buchi]


1.3.1 (2021-02-05)
------------------

- Preserve multi-valued QS params when stripping ticket from service URL. [lgraf]


1.3.0 (2020-06-02)
------------------

- Handle login similar to PlonePAS (fire login events, expire clipboard,
  create member area and set login times) in @caslogin endpoint. [tinagerber]


1.2.0 (2018-07-17)
------------------

- Add plone.restapi endpoint for login.
  [buchi]

- Add Plone 5 compatibility. [phgross]


1.1.0 (2016-10-13)
------------------

- Handle login similar to PlonePAS (fire login events,
  expire clipboard, create member area and set login times).
  [phgross]

- Avoid having the `ticket` param end up in the browser address bar by
  stripping it from the service_url, and redirecting to the service_url
  after extracting credentials (i.e., a ticket) from the request.
  [lgraf]


1.0.0 (2015-11-25)
------------------

- Initial release.
  [buchi]