@@ -31,7 +31,7 @@ class TestCASLogin(unittest.TestCase):
             browser.json[u'error'][u'type'], u'Missing service ticket')
 
     @browsing
-    def test_missing_plugin_returns_501(self, browser):
+    def test_missing_cas_plugin_returns_501(self, browser):
         self.portal.acl_users._delOb('cas_auth')
         with browser.expect_http_error(code=501, reason='Not Implemented'):
             browser.open(
@@ -46,7 +46,25 @@ class TestCASLogin(unittest.TestCase):
         self.assertEqual(browser.status_code, 501)
         self.assertEqual(
             browser.json[u'error'][u'message'],
-            u'CAS/JWT authentication plugin not installed.')
+            u'CAS authentication plugin not installed.')
+
+    @browsing
+    def test_missing_jwt_plugin_returns_501(self, browser):
+        self.portal.acl_users._delOb('jwt_auth')
+        with browser.expect_http_error(code=501, reason='Not Implemented'):
+            browser.open(
+                self.portal.absolute_url() + '/@caslogin',
+                data=json.dumps({
+                    "ticket": "12345",
+                }),
+                method='POST',
+                headers={'Accept': 'application/json',
+                         'Content-Type': 'application/json'},
+            )
+        self.assertEqual(browser.status_code, 501)
+        self.assertEqual(
+            browser.json[u'error'][u'message'],
+            u'JWT authentication plugin not installed.')
 
     @browsing
     def test_valid_ticket_returns_jwt_token(self, browser):
@@ -63,6 +81,25 @@ class TestCASLogin(unittest.TestCase):
             )
         self.assertEqual(browser.status_code, 200)
         self.assertIn(u'token', browser.json)
+
+    @browsing
+    def test_returns_ac_cookie_if_requested(self, browser):
+        with patch('ftw.casauth.restapi.caslogin.validate_ticket') as mock:
+            mock.return_value = TEST_USER_ID
+            browser.open(
+                self.portal.absolute_url() + '/@caslogin',
+                data=json.dumps({
+                    "ticket": "12345",
+                    "set_cookie": True,
+                }),
+                method='POST',
+                headers={'Accept': 'application/json',
+                         'Content-Type': 'application/json'},
+            )
+        self.assertEqual(browser.status_code, 200)
+        self.assertIn(u'userid', browser.json)
+        self.assertIn(u'fullname', browser.json)
+        self.assertIn(u'__ac', browser.cookies)
 
     @browsing
     def test_accepts_service_url_from_body(self, browser):
