@@ -4,6 +4,7 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
+- Add support for cookie based authentication when using REST API. [buchi]
 - Drop support for Python < 2.7.9. [buchi]
 - Use Python's built-in HTTPS handler which enables support for TLS 1.2 and
   uses CA certificates provided by the OS. [buchi]
